[gd_scene load_steps=11 format=3 uid="uid://cr7uabtswvwym"]

[ext_resource type="Script" path="res://Scripts/goblin.gd" id="1_da5vg"]
[ext_resource type="Texture2D" uid="uid://dqtveq4llwknv" path="res://Sprites/0x72_DungeonTilesetII_v1.4.png" id="1_l1uj8"]
[ext_resource type="Texture2D" uid="uid://bjeghg8gb06c0" path="res://Sprites/Light.png" id="2_w21nf"]
[ext_resource type="Script" path="res://Scripts/Life2.gd" id="3_35834"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0s85l"]
radius = 5.0
height = 15.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lw5ja"]
size = Vector2(10, 15)

[sub_resource type="Animation" id="Animation_nnhpy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [215]
}

[sub_resource type="Animation" id="Animation_1dg1r"]
resource_name = "Walking"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [218, 219, 220, 221, 222]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2ian5"]
_data = {
"RESET": SubResource("Animation_nnhpy"),
"Walking": SubResource("Animation_1dg1r")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_q4mxk"]
radius = 135.093

[node name="Goblin" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 275
script = ExtResource("1_da5vg")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
z_index = -1
position = Vector2(1, 16)
scale = Vector2(0.024, 0.00400001)
texture = ExtResource("2_w21nf")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.658824)
texture = ExtResource("1_l1uj8")
hframes = 32
vframes = 16
frame = 215

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 7.5)
shape = SubResource("CapsuleShape2D_0s85l")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 268

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, 7.5)
shape = SubResource("RectangleShape2D_lw5ja")

[node name="Life" type="Container" parent="."]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_35834")

[node name="Heart1" type="Sprite2D" parent="Life"]
position = Vector2(1, -4)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_l1uj8")
hframes = 32
vframes = 32
frame = 530

[node name="Hurt" type="Timer" parent="."]
wait_time = 0.3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
autoplay = "Walking"
libraries = {
"": SubResource("AnimationLibrary_2ian5")
}

[node name="ActivationArea" type="Area2D" parent="." groups=["enemy"]]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActivationArea"]
shape = SubResource("CircleShape2D_q4mxk")

[node name="Particles" type="CPUParticles2D" parent="."]
emitting = false
amount = 20
lifetime = 0.2
one_shot = true
emission_shape = 1
emission_sphere_radius = 20.0
direction = Vector2(1, 200)
spread = 166.68
initial_velocity_min = 58.59
initial_velocity_max = 68.69
scale_amount_min = 2.0
scale_amount_max = 3.0
color = Color(0, 0.419608, 0.192157, 1)

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Invincible" type="Timer" parent="."]
wait_time = 5.0

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="Hurt" to="." method="_on_hurt_timeout"]
[connection signal="area_entered" from="ActivationArea" to="." method="_on_activation_area_area_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="Invincible" to="." method="_on_invincible_timeout"]
